style: resolve some layout issues: - buttons instead of text on smaller screens for Update and Delete dialogs - custom breakpoint

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
+    --breakpoint-custom-sm: 390px;
+
     --color-elevated-bg: var(--elevated-bg);
     --color-amft-white: var(--text-white);
     --color-lines: var(--lines);
